# cr_std_lib

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: cr_std_arena.h  cr_std_cli.h  cr_std_csv.h  cr_std_filesystem.h  cr_std_logger.h  cr_std_string.h  cr_std_testing.h  cr_std_utils.h  cr_std_vector.h
scripts/: build-linux.sh  build-windows.bat  install-linux.sh  install-windows.bat  run-linux.sh
src/: cr_std_arena.c  cr_std_cli.c  cr_std_csv.c  cr_std_filesystem.c  cr_std_filesystem_linux.c  cr_std_filesystem_win32.c  cr_std_logger.c  cr_std_string.c  cr_std_testing.c  cr_std_utils.c  cr_std_vector.c  main.c
tests/: cr_std_arena_tests.c  cr_std_arena_tests.h  cr_std_cli_tests.c  cr_std_cli_tests.h  cr_std_csv_tests.c  cr_std_csv_tests.h  cr_std_string_tests.c  cr_std_string_tests.h  cr_std_vector_tests.c  cr_std_vector_tests.h  run_all.c
tests/data/: example.csv
